tests/files/flow_controller_tests/should_run/111.cmdr
x = 1;
print arcsech(x);