tests/files/flow_controller_tests/should_fail/108.cmdr
x = false;
print arcsech(x);